--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ body
 
 .prices
 {
+    width: 100%;
+    justify-content: flex-start;
     display: flex;
     align-items: center;
     margin-top: 20px;
